# rxtui

./: API_REFERENCE.md  Cargo.toml  DOCS.md  IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md  TUTORIAL.md  plan.md
examples/: README.md  align.rs  components.rs  counter.rs  demo.rs  form.rs  gap.rs  hover.rs  inline.rs  progressbar.rs  rxtui.rs  scroll.rs  scroll_nested.rs  shimmer_text.rs  spinner.rs  spinner_custom.rs  stopwatch.rs  textinput.rs
examples/demo_pages/: page10_unicode.rs  page11_content_sizing.rs  page12_focus.rs  page13_rich_text.rs  page14_text_input.rs  page15_scrollable.rs  page1_overflow.rs  page2_direction.rs  page3_percentages.rs  page4_borders.rs  page5_absolute.rs  page6_text_styles.rs  page7_auto_sizing.rs  page8_text_wrap.rs  page9_element_wrap.rs
rxtui/: Cargo.toml  README.md
rxtui/lib/: buffer.rs  lib.rs  prelude.rs  style.rs  terminal.rs  vdom.rs
rxtui/lib/app/: config.rs  core.rs  inline.rs  mod.rs  renderer.rs
rxtui/lib/components/: mod.rs  shimmer_text.rs  text_input.rs
rxtui/lib/macros/: mod.rs  node.rs
rxtui/lib/node/: div.rs
rxtui/lib/render_tree/: node.rs  tree.rs
rxtui/tests/: macro_tests.rs
