[package]
name = "rxtui-workspace"
version = "0.1.8"
edition = "2021"
publish = false

[features]
default = ["effects", "components"]
effects = ["rxtui/effects"]
components = ["rxtui/components"]

[workspace]
resolver = "2"
members = [
    "rxtui",
    "rxtui-macros",
]

[workspace.package]
version = "0.1.8"
edition = "2024"
authors = ["Microsandbox Team"]
license = "Apache-2.0"
repository = "https://github.com/microsandbox/rxtui"
homepage = "https://github.com/microsandbox/rxtui"
documentation = "https://docs.rs/rxtui"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dependencies]
rxtui = { path = "rxtui", features = ["effects", "components"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"] }

# Profile configurations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
