[package]
name = "rxtui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description = "A framework for building beautiful, responsive terminal user interfaces with a DOM-style hierarchical approach"
keywords = ["tui", "terminal", "ui", "reactive", "component"]
categories = ["command-line-interface", "gui"]

[lib]
name = "rxtui"
path = "lib/lib.rs"

[features]
default = ["effects", "components"]
effects = ["tokio", "futures"]
components = ["effects"]

[dependencies]
rxtui-macros = { version = "0.1.6", path = "../rxtui-macros" }
bitflags = "2.4"
crossterm = "0.28"
serde.workspace = true
thiserror.workspace = true
unicode-width = "0.2"

# Optional dependencies for effects
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "sync", "macros"], optional = true }
futures = { version = "0.3", optional = true }
